# mcp-kubernetes

./: .gitignore  Dockerfile  Dockerfile.windows  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  go-ossf-slsa3-publish.yml  release.yml
.slsa-goreleaser/: darwin-amd64.yml  darwin-arm64.yml  linux-amd64.yml  linux-arm64.yml  windows-amd64.yml  windows-arm64.yml
cmd/mcp-kubernetes/: main.go
example/test_data/: 1.health-probe-issue.yaml  2.calico-network-policy-issue.yaml
go/: .gitignore  README.md  go.mod  go.sum
go/examples/: simple-client.go  test-client.go
internal/cilium/: executor.go
internal/config/: config.go  validator.go
internal/helm/: executor.go  registry.go
internal/kubectl/: executor.go  registry.go
internal/server/: server.go
internal/tools/: executor.go  handler.go
internal/version/: version.go
pkg/cilium/: executor.go  registry.go
pkg/config/: config.go  config_test.go
pkg/helm/: executor.go  registry.go
pkg/hubble/: executor.go  registry.go
pkg/kubectl/: executor.go  kubectl_executor.go  kubectl_executor_test.go  pending_requests.go  registry.go  registry_test.go  worker.go
pkg/security/: security.go  validator.go  validator_test.go
pkg/server/: server.go
pkg/tools/: executor.go  handler.go
pkg/version/: version.go
src/mcp_kubernetes/: __init__.py  args_validator.py  cilium.py  command.py  config.py  helm.py  kubeclient.py  kubectl.py  main.py  (+3 more)
tests/: README.md  __init__.py  test_args_validator.py  test_security.py  test_tool_registry.py
(+36 files in other folders)
