[project]
name = "mcp-kubernetes"
version = "0.0.1"
description = "The mcp-kubernetes is a Model Context Protocol (MCP) server that enables AI assistants to interact with Kubernetes clusters. It serves as a bridge between AI tools (like Claude, Cursor, and GitHub Copilot) and Kubernetes, translating natural language requests into Kubernetes operations and returning the results in a format the AI tools can understand."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.5",
    "kubernetes>=32.0.1",
]

[project.scripts]
mcp-kubernetes = "mcp_kubernetes:main"

[dependency-groups]
dev = [
    "mcp-kubernetes",
]

[tool.uv.sources]
mcp-kubernetes = { workspace = true }
